docs/archive/root_artifacts_20260215/final_verification_output_v8.txt
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-8.4.2, pluggy-1.6.0 -- /usr/bin/python3
cachedir: .pytest_cache
benchmark: 5.1.0 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
hypothesis profile 'default' -> database=DirectoryBasedExampleDatabase(PosixPath('/mnt/projects/.hypothesis/examples'))
rootdir: /mnt/projects
configfile: pyproject.toml
plugins: asyncio-1.2.0, cov-7.0.0, xdist-3.8.0, anyio-4.12.0, mock-3.12.0, benchmark-5.1.0, hypothesis-6.98.15
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 19 items / 1 error

==================================== ERRORS ====================================
_______________ ERROR collecting tests/test_ebpf_integration.py ________________
/home/x0ttta6bl4/.local/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
/home/x0ttta6bl4/.local/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/home/x0ttta6bl4/.local/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/x0ttta6bl4/.local/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/mnt/projects/tests/test_ebpf_integration.py", line 202
E       stone
E            ^
E   IndentationError: unindent does not match any outer indentation level
----------------- generated xml file: /mnt/projects/junit.xml ------------------
=========================== short test summary info ============================
ERROR tests/test_ebpf_integration.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 11.81s ===============================
